solve wrap issue when narrow the screen

--- a/src/components/UserProfile/AddNewUserProfile/UserProfileAdd.scss
+++ b/src/components/UserProfile/AddNewUserProfile/UserProfileAdd.scss
@@ -119,3 +119,28 @@ form-control {
 .user-add-row {
   width: auto;
 }
+
+.text-md-right {
+  white-space: nowrap;
+}
+
+@media only screen and (max-width: 1024px) {
+  .text-md-right {
+    padding: 0px !important;
+  }
+
+  label {
+    font-weight: normal;
+  }
+}
+
+@media only screen and (max-width: 992px) and (min-width: 768px) {
+  .user-add-row {
+    margin-right: -50px !important;
+    margin-left: -50px !important;
+    font-size: 14px;
+  }
+  .form-control {
+    max-width: 210px !important;
+  }
+}
